--- a/works_content-02.html
+++ b/works_content-02.html
@@ -54,7 +54,9 @@
                         </a>
                     </li>
                     <li class="nav_icon">
-                        <img src="./images/instagram-100.png" alt="instagram">
+                        <a href="https://www.instagram.com/imuy_34?igsh=b2JjZXhxcmtwaXhu&utm_source=qr">
+                            <img src="./images/instagram-100.png" alt="instagram">
+                        </a>
                     </li>
                 </ul>
             </nav>
@@ -87,7 +89,9 @@
                         </a>
                     </li>
                     <li class="nav_icon">
-                        <img src="./images/instagram-100.png" alt="instagram">
+                        <a href="https://www.instagram.com/imuy_34?igsh=b2JjZXhxcmtwaXhu&utm_source=qr">
+                            <img src="./images/instagram-100.png" alt="instagram">
+                        </a>
                     </li>
                 </ul>
             </nav>
