--- a/thanks.html
+++ b/thanks.html
@@ -11,6 +11,7 @@
 <body>
 
     <picture class="img01">
+        <source srcset="images/sp_thanks_img.png" media="(max-width: 767px)">
         <img src="images/thanks_img.png" alt="img01">
     </picture>
 
@@ -27,6 +28,7 @@
     </div>
 
     <picture class="img02">
+        <source srcset="images/sp_thanks_img2.png" media="(max-width: 767px)">
         <img src="images/thanks_img02.png" alt="img02">
     </picture>
 
