--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                                 A design that harmonizes the ideas of many people
                             </div>
                         </div>
-                        <div class="sp_top_scroll">
-                            <span class="mgr-20">scroll</span>down
-                            <div class="sp_scroll_line"></div>
-                        </div>
                     </div>
+                </div>
+                <div class="sp_top_scroll">
+                    <span class="mgr-20">scroll</span>down
+                    <div class="sp_scroll_line"></div>
                 </div>
                 <div class="top_scroll">
                     <span class="mgr-20">scroll</span>down
@@ -496,7 +496,13 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         (() => {
             document.addEventListener('DOMContentLoaded', () => {
                 let scroll
+                function isMobileDevice() {
+                    return /iPhone|iPad|iPod|Android/i.test(navigator.userAgent)
+                }
                 function initScroll() {
+                    if (isMobileDevice()) {
+                        return
+                    }
                     const isMobile = window.innerWidth <= 1024
                     const direction = window.innerWidth <= 1024 ? 'vertical' : 'horizontal';
                     scroll = new LocomotiveScroll({
