--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
             </nav>
             <div class="sp_btn">
                 <span></span>
-                <!-- <span></span> -->
             </div>
         </div>
 
@@ -112,7 +111,8 @@
                     </div>
                     <div class="portfolio_lead">
                         <div class="portfolio_lead-ja">
-                            いろんな人の想いが、<br>調和したデザイン。
+                            いろんな人の想いが、<br>
+                            <span class="mgt-5">調和したデザイン。</span>
                         </div>
                         <div class="portfolio_lead-en">
                             A design that harmonizes the ideas of many people
