--- a/works_list.html
+++ b/works_list.html
@@ -115,7 +115,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="pc_img" src="./images/pc_works_hair design-100.png" alt="美容室LP">
+                <a href="./works_content-01.html">
+                    <img class="pc_img" src="./images/pc_works_hair design-100.png" alt="美容室LP">
+                </a>
                 <div class="works_service">
                     web site
                 </div>
@@ -124,7 +126,9 @@
                 </div>
             </div>
             <div class="works_content">
-                <img class="pc-tablet-sp_img" src="./images/pc_works_design cafe-100.png" alt="デザインカフェHP">
+                <a href="./works_content-02.html">
+                    <img class="pc-tablet-sp_img" src="./images/pc_works_design cafe-100.png" alt="デザインカフェHP">
+                </a>
                 <div class="works_service">
                     web site
                 </div>
@@ -142,7 +146,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/pc_works_burger-100.png" alt="新商品 告知バナー">
+                <a href="./works_content-03.html">
+                    <img class="banner_img" src="./images/pc_works_burger-100.png" alt="新商品 告知バナー">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -151,7 +157,9 @@
                 </div>
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/pc_works_mobile plan-100.png" alt="モバイルプラン 訴求バナー">
+                <a href="./works_content-04.html">
+                    <img class="banner_img" src="./images/pc_works_mobile plan-100.png" alt="モバイルプラン 訴求バナー">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -164,7 +172,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="pc-tablet-sp_img" src="./images/pc_works_workers-100.png" alt="コワーキングスペースLP">
+                <a href="./works_content-05.html">
+                    <img class="pc-tablet-sp_img" src="./images/pc_works_workers-100.png" alt="コワーキングスペースLP">
+                </a>
                 <div class="works_service">
                     web site
                 </div>
@@ -173,7 +183,9 @@
                 </div>
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/pc_works_trrrrip-100.png" alt="新規アプリケーション 紹介バナー">
+                <a href="./works_content-06.html">
+                    <img class="banner_img" src="./images/pc_works_trrrrip-100.png" alt="新規アプリケーション 紹介バナー">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -191,7 +203,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/東京おすすめスポット.png" alt="Webメディアアイキャッチ">
+                <a href="./works_content-07.html">
+                    <img class="banner_img" src="./images/東京おすすめスポット.png" alt="Webメディアアイキャッチ">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -200,7 +214,9 @@
                 </div>
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/works_サラダ.png" alt="Webメディアアイキャッチ">
+                <a href="./works_content-08.html">
+                    <img class="banner_img" src="./images/works_サラダ.png" alt="Webメディアアイキャッチ">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -216,7 +232,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="pc_img" src="./images/pc_works_hair design-100.png" alt="美容室LP">
+                <a href="./works_content-01.html">
+                    <img class="pc_img" src="./images/pc_works_hair design-100.png" alt="美容室LP">
+                </a>
                 <div class="works_service">
                     web site
                 </div>
@@ -230,7 +248,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="pc-tablet-sp_img" src="./images/pc_works_design cafe-100.png" alt="デザインカフェHP">
+                <a href="./works_content-02.html">
+                    <img class="pc-tablet-sp_img" src="./images/pc_works_design cafe-100.png" alt="デザインカフェHP">
+                </a>
                 <div class="works_service">
                     web site
                 </div>
@@ -248,7 +268,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/pc_works_burger-100.png" alt="新商品 告知バナー">
+                <a href="./works_content-03.html">
+                    <img class="banner_img" src="./images/pc_works_burger-100.png" alt="新商品 告知バナー">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -262,7 +284,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/pc_works_mobile plan-100.png" alt="モバイルプラン 訴求バナー">
+                <a href="./works_content-04.html">
+                    <img class="banner_img" src="./images/pc_works_mobile plan-100.png" alt="モバイルプラン 訴求バナー">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -276,7 +300,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="pc-tablet-sp_img" src="./images/pc_works_workers-100.png" alt="コワーキングスペースLP">
+                <a href="./works_content-05.html">
+                    <img class="pc-tablet-sp_img" src="./images/pc_works_workers-100.png" alt="コワーキングスペースLP">
+                </a>
                 <div class="works_service">
                     web site
                 </div>
@@ -290,7 +316,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/pc_works_trrrrip-100.png" alt="新規アプリケーション 紹介バナー">
+                <a href="./works_content-06.html">
+                    <img class="banner_img" src="./images/pc_works_trrrrip-100.png" alt="新規アプリケーション 紹介バナー">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -308,7 +336,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/東京おすすめスポット.png" alt="Webメディアアイキャッチ">
+                <a href="./works_content-07.html">
+                    <img class="banner_img" src="./images/東京おすすめスポット.png" alt="Webメディアアイキャッチ">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
@@ -322,7 +352,9 @@
             <div class="gradation">
             </div>
             <div class="works_content">
-                <img class="banner_img" src="./images/works_サラダ.png" alt="Webメディアアイキャッチ">
+                <a href="./works_content-08.html">
+                    <img class="banner_img" src="./images/works_サラダ.png" alt="Webメディアアイキャッチ">
+                </a>
                 <div class="works_service">
                     web banner
                 </div>
